fixing weird issue of right space on mobile device and attaching correct images

--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,11 @@
 }
 body,
 html {
+  width: 100%;
   height: 100%;
-  margin: 0;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
 }
 .hero-image {
